metadata/sf-prod/force-app/main/default/objects/workspan__DeployResult__c/workspan__DeployResult__c.object-meta.xml
<CustomObject>
    <label>Deploy Result</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Deploy Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeployResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>