metadata/sf-prod/force-app/main/default/objects/workspan__DeployResult__c/fields/workspan__DeploymentId__c.field-meta.xml
<CustomField>
    <fullName>workspan__DeploymentId__c</fullName>
    <label>Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>