metadata/sf-prod/force-app/main/default/objects/workspan__DeployResult__c/fields/workspan__Done__c.field-meta.xml
<CustomField>
    <fullName>workspan__Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Done</label>
    <type>Checkbox</type>
</CustomField>