metadata/sf-prod/force-app/main/default/objects/workspan__DeployResult__c/fields/workspan__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>workspan__ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>