metadata/sf-prod/force-app/main/default/objects/workspan__DeployResult__c/fields/workspan__Success__c.field-meta.xml
<CustomField>
    <fullName>workspan__Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>